--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "jquery": "^3.6.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "vite-plugin-ruby": "^3.2.2"
   },
   "devDependencies": {
+    "@rollup/plugin-inject": "^5.0.3",
+    "@types/jquery": "^3.5.16",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.57.1",
